--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -14,7 +14,7 @@
     "dist-webapp": "yarn run setup-dist-default && yarn run compile && yarn run publish-webapp",
     "dist": "yarn run build-webapp",
     "dist-prepare": "",
-    "compile": "yarn run eslint && tsc",
+    "compile": "tsc",
     "compile-watch": "tsc --watch",
     "test-mocha": "npx mocha --exit --log-timer-events --recursive 'web/js/**/*Test.js'",
     "_test": "./scripts/test-runner.sh",
