--- a/packages/polar-app-public/polar-blocks/package.json
+++ b/packages/polar-app-public/polar-blocks/package.json
@@ -4,8 +4,9 @@
   "description": "Blocks infra and main interfaces that can be used on the frontend and backend.",
   "main": "index.js",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
-    "compile": "yarn run eslint && tsc"
+    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
