--- a/packages/polar-app-public/polar-pdf/package.json
+++ b/packages/polar-app-public/polar-pdf/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "karma": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
     "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
-    "compile": "yarn run eslint && tsc"
+    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
