--- a/packages/polar-app-public/polar-react-svg-icons/package.json
+++ b/packages/polar-app-public/polar-react-svg-icons/package.json
@@ -3,8 +3,9 @@
   "version": "2.1.97",
   "description": "",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
-    "compile": "yarn run eslint && tsc"
+    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
