--- a/packages/polar-app-public/polar-search-api/package.json
+++ b/packages/polar-app-public/polar-search-api/package.json
@@ -4,8 +4,9 @@
   "description": "Provides just the basic API that we can use in both the frontend and backend for API requests and responses.",
   "main": "index.js",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
-    "compile": "yarn run eslint && tsc"
+    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
