--- a/packages/polar-app-public/polar-url/package.json
+++ b/packages/polar-app-public/polar-url/package.json
@@ -4,8 +4,9 @@
   "description": "URL parsing framework that's portable to Node 8, 10, etc.",
   "scripts": {
     "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
-    "compile": "yarn run eslint && tsc"
+    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
