--- a/packages/polar-app-public/polar-epub/package.json
+++ b/packages/polar-app-public/polar-epub/package.json
@@ -4,8 +4,8 @@
   "description": "EPUB support in Polar.",
   "main": "index.js",
   "scripts": {
-    "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "test": "echo nothing to test",
+    "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
+    "_test": "echo nothing to test",
     "compile": "tsc"
   },
   "keywords": [],
@@ -19,7 +19,9 @@
     "typescript": "=4.2.3"
   },
   "dependencies": {
-    "epubjs": "=0.3.89-polar.16",
+    "epubjs": "=0.3.89-polar.19",
+    "fast-xml-parser": "^3.19.0",
+    "node-stream-zip": "^1.14.0",
     "polar-shared": "^2.1.98"
   }
 }
