--- a/packages/polar-app-public/polar-answers/package.json
+++ b/packages/polar-app-public/polar-answers/package.json
@@ -25,8 +25,7 @@
     "polar-blocks": "^2.1.99",
     "polar-google-cloud-language": "^2.1.99",
     "polar-pdf": "^2.1.99",
-    "polar-shared": "^2.1.99",
-    "polar-test": "^2.1.99"
+    "polar-shared": "^2.1.99"
   },
   "files": [
     "**/*.js",
