--- a/packages/polar-app-public/polar-epub/package.json
+++ b/packages/polar-app-public/polar-epub/package.json
@@ -1,11 +1,11 @@
 {
   "name": "polar-epub",
-  "version": "2.1.98",
+  "version": "2.1.99",
   "description": "EPUB support in Polar.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "_test": "echo nothing to test",
+    "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
+    "test": "echo nothing to test",
     "compile": "tsc"
   },
   "keywords": [],
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/mocha": "=8.2.2",
     "mocha": "=9.0.0",
-    "polar-test": "^2.1.98",
+    "polar-test": "^2.1.99",
     "tslint": "6.1.2",
     "typescript": "=4.2.3"
   },
@@ -22,6 +22,6 @@
     "epubjs": "=0.3.89-polar.19",
     "fast-xml-parser": "^3.19.0",
     "node-stream-zip": "^1.14.0",
-    "polar-shared": "^2.1.98"
+    "polar-shared": "^2.1.99"
   }
 }
