--- a/packages/polar-app-private/polar-doc-preview-loader/package.json
+++ b/packages/polar-app-private/polar-doc-preview-loader/package.json
@@ -4,7 +4,7 @@
   "description": "Loads up doc preview URLs into be queued for processing",
   "main": "index.js",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
   },
