--- a/packages/polar-app-private/polar-firebase-admin/package.json
+++ b/packages/polar-app-private/polar-firebase-admin/package.json
@@ -4,7 +4,7 @@
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
   },
