--- a/packages/polar-app-private/polar-hacker-news-crawler/package.json
+++ b/packages/polar-app-private/polar-hacker-news-crawler/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
   },
