--- a/packages/polar-app-private/polar-hooks/functions/package.json
+++ b/packages/polar-app-private/polar-hooks/functions/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../../.eslintrc.json .",
+    "eslint": "eslint -c ../../../../.eslintrc.json .",
     "compile": "tsc",
     "compile:watch": "npx tsc --watch",
     "dist": "yarn run compile"
