--- a/packages/polar-app-public/polar-browsers/package.json
+++ b/packages/polar-app-public/polar-browsers/package.json
@@ -4,7 +4,7 @@
   "description": "Determine which browser is being used.",
   "main": "index.js",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
   },
