--- a/packages/polar-app-public/polar-react-svg-icons/package.json
+++ b/packages/polar-app-public/polar-react-svg-icons/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.101",
   "description": "",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
   },
