--- a/packages/polar-app-public/polar-web-extension/package.json
+++ b/packages/polar-app-public/polar-web-extension/package.json
@@ -4,7 +4,7 @@
   "description": "https://github.com/yeoman/generator-chrome-extension",
   "scripts": {
     "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "eslint": "figlet ${npm_package_name} && eslint -c ./.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "eslint-fix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc",
     "clean": "rm -rf .webpack-cache-loader && rm -rf .terser-webpack-plugin && rm -rf dist && rm -rf polar-web-extension.zip",
