revert pdf.js changes

--- a/packages/pdf.js/package.json
+++ b/packages/pdf.js/package.json
@@ -16,8 +16,8 @@
     "cross-env": "^7.0.3",
     "es-module-shims": "^0.6.0",
     "escodegen": "^2.0.0",
-    "eslint": "=7.32.0",
-    "eslint-config-prettier": "=8.3.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-fetch-options": "^0.0.5",
     "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "=2.24.1",
