--- a/packages/epub.js/package.json
+++ b/packages/epub.js/package.json
@@ -35,7 +35,7 @@
     "@babel/runtime": "^7.10.2",
     "babel-loader": "^8.1.0",
     "documentation": "^13.0.1",
-    "eslint": "=7.32.0",
+    "eslint": "^7.1.0",
     "jsdoc": "^3.6.4",
     "karma": "^5.0.9",
     "karma-chrome-launcher": "^3.1.0",
