--- a/packages/polar-app-public/polar-answers-api/package.json
+++ b/packages/polar-app-public/polar-answers-api/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "polar-answers",
+  "name": "polar-answers-api",
   "version": "2.1.104",
   "description": "",
   "scripts": {
-    "test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
+    "test": "echo noop",
     "compile": "tsc",
     "compile:watch": "tsc --watch"
   },
@@ -15,19 +15,10 @@
     "@types/mocha": "=8.2.2",
     "chai": "4.2.0",
     "mocha": "=9.0.0",
-    "polar-firebase-admin": "^2.1.104",
-    "polar-test": "^2.1.104",
-    "tslint": "6.1.2",
     "typescript": "=4.2.3"
   },
   "dependencies": {
-    "@google-cloud/language": "=4.2.5",
-    "polar-blocks": "^2.1.104",
-    "polar-google-cloud-language": "^2.1.104",
-    "polar-pdf": "^2.1.104",
-    "polar-shared": "^2.1.104",
-    "polar-test": "^2.1.104",
-    "polar-answers-api": "^2.1.104"
+    "polar-shared": "^2.1.104"
   },
   "files": [
     "**/*.js",
