--- a/packages/polar-app-public/polar-create-module/package.json
+++ b/packages/polar-app-public/polar-create-module/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "polar-create-update-module",
+  "name": "polar-create-module",
   "version": "2.1.97",
   "description": "A module to create polar-modules",
   "scripts": {
-    "eslint": "figlet ${npm_package_name} && eslint -c ../../../.eslintrc.json .",
+    "eslint": "eslint -c ./.eslintrc.json .",
     "compile": "yarn run eslint && tsc"
   },
   "author": "Polar",
