fix vscode not loading every folder's eslintrc config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "eslint.workingDirectories": [{ "mode": "auto" }],
   "colorize.include": ["**/*.json", ""],
   "better-comments.tags": [
     {
