cleanup of this a bit more...

--- a/packages/polar-app-public/polar-create-module/package.json
+++ b/packages/polar-app-public/polar-create-module/package.json
@@ -12,7 +12,7 @@
     "publish": "yarn run build"
   },
   "bin": {
-    "polar-create-module": "./src/CreateModule.js"
+    "polar-create-module": "./bin/polar-create-module"
   },
   "author": "Polar",
   "license": "ISC"
