More tests... Dockerfile changes... etc.

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "bash": "docker build --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) -f Dockerfile -t polar . && docker run -v $(pwd):/polar-app:delegated -w /polar-app -u $(id -u ${USER}):$(id -g ${USER}) -e WEBPACK_BUNDLE=repository -p 8050:8050 -ti --rm --init --ulimit memlock=819200000:819200000 polar bash",
     "bootstrap": "lerna bootstrap && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link",
     "bootstrap-ci": "lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && lerna link",
+    "eslint": "lerna run eslint --no-bail",
     "compile": "lerna run compile",
     "publish": "lerna exec --no-private -- yarn publish --no-bail",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "set-registry-verdaccio": "rm -f ~/.npmrc && cat .npmrc > ~/.npmrc",
     "lerna-run-dist": "lerna run --concurrency=1 --parallel=false --stream dist",
     "lerna-run-test": "lerna run --concurrency=1 --parallel=false test",
