remove dead scripts

--- a/packages/polar-app-private/polar-admin/package.json
+++ b/packages/polar-app-private/polar-admin/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo no tests",
-    "compile": "npx tsc",
-    "dist": "echo noop"
+    "compile": "npx tsc"
   },
   "author": "",
   "license": "ISC",
