--- a/packages/polar-app-private/polar-hacker-news-crawler/package.json
+++ b/packages/polar-app-private/polar-hacker-news-crawler/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo noop",
-    "compile": "tsc",
-    "dist": "echo noop"
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
