--- a/packages/polar-app-private/polar-block-permissions/package.json
+++ b/packages/polar-app-private/polar-block-permissions/package.json
@@ -4,10 +4,8 @@
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
-    "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
     "test": "echo noop",
-    "compile": "tsc",
-    "dist": "echo noop"
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
