--- a/packages/polar-app-public/polar-assets-basic-flat-icons/package.json
+++ b/packages/polar-app-public/polar-assets-basic-flat-icons/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo no tests",
-    "compile": "true",
-    "dist": "echo noop"
+    "compile": "true"
   },
   "repository": {
     "type": "git",
