--- a/packages/polar-app-public/polar-assets/package.json
+++ b/packages/polar-app-public/polar-assets/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo no tests",
-    "compile": "true",
-    "dist": "echo noop"
+    "compile": "true"
   },
   "devDependencies": {
     "@types/sharp": "^0.25.0"
