ability to disable typescript for some modules.

--- a/packages/polar-app-public/polar-create-module/package.json
+++ b/packages/polar-app-public/polar-create-module/package.json
@@ -14,6 +14,9 @@
   "bin": {
     "polar-create-module": "./bin/polar-create-module"
   },
+  "dependencies": {
+    "polar-shared": "^2.1.107"
+  },
   "author": "Polar",
   "license": "ISC"
 }
