--- a/packages/polar-app-public/polar-webpack/package.json
+++ b/packages/polar-app-public/polar-webpack/package.json
@@ -2,13 +2,7 @@
   "name": "polar-webpack",
   "version": "2.1.107",
   "description": "Basic webpack dependencies and utilities.",
-  "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "compile": "tsc",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
-    "eslint": "eslint -c ./.eslintrc.json .",
-    "eslintfix": "eslint -c ./.eslintrc.json . --fix"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
