--- a/packages/polar-bookshelf-secrets/package.json
+++ b/packages/polar-bookshelf-secrets/package.json
@@ -15,11 +15,5 @@
     "url": "https://github.com/burtonator/polar-bookshelf-secrets/issues"
   },
   "homepage": "https://github.com/burtonator/polar-bookshelf-secrets#readme",
-  "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
-    "eslint": "eslint -c ./.eslintrc.json .",
-    "eslintfix": "eslint -c ./.eslintrc.json . --fix",
-    "compile": "tsc"
-  }
+  "scripts": {}
 }
