--- a/packages/polar-app-public/polar-assets/package.json
+++ b/packages/polar-app-public/polar-assets/package.json
@@ -3,12 +3,7 @@
   "version": "2.1.107",
   "description": "",
   "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "compile": "tsc",
-    "dist": "echo noop",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
-    "eslint": "eslint -c ./.eslintrc.json .",
-    "eslintfix": "eslint -c ./.eslintrc.json . --fix"
+    "dist": "echo noop"
   },
   "devDependencies": {
     "@types/sharp": "^0.25.0"
