--- a/packages/polar-app-public/polar-google-fonts/package.json
+++ b/packages/polar-app-public/polar-google-fonts/package.json
@@ -3,13 +3,7 @@
   "version": "2.1.107",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
-    "eslint": "eslint -c ./.eslintrc.json .",
-    "eslintfix": "eslint -c ./.eslintrc.json . --fix",
-    "compile": "tsc"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
