--- a/packages/polar-bookshelf/tsconfig.json
+++ b/packages/polar-bookshelf/tsconfig.json
@@ -1,6 +1,6 @@
+// THIS FILE IS AUTO-GENERATED, DO NOT EDIT
 {
   "compilerOptions": {
-
     "incremental": true,
     "strict": true,
     "noImplicitAny": true,
@@ -11,7 +11,8 @@
     "noImplicitReturns": true,
     "removeComments": true,
     "strictFunctionTypes": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "target": "ES2015",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -22,26 +23,36 @@
     "checkJs": false,
     "jsx": "react",
     "esModuleInterop": true,
-
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-
     "forceConsistentCasingInFileNames": true,
-
     "allowSyntheticDefaultImports": true,
-
     "baseUrl": ".",
+    "lib": [
+      "es2019",
+      "es2020.string",
+      "dom"
+    ],
     "paths": {
-      "*": ["node_modules/*"]
+      "*": [
+        "node_modules/*"
+      ]
     },
-    "lib": ["es2019", "es2020.string", "dom"],
     "skipLibCheck": true
   },
+  "types": [
+    "mocha",
+    "reflect-metadata"
+  ],
   "include": [
-    "web/**/*",
-    "apps/**/*"
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules/**",
+    "dist",
+    "*.d.ts",
+    "*.js",
+    "cdk.out"
   ]
 }
