--- a/packages/polar-app-private/polar-admin/package.json
+++ b/packages/polar-app-private/polar-admin/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "firebase-tools": "=9.16.0",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.13.2",
