--- a/packages/polar-app-private/polar-block-permissions/package.json
+++ b/packages/polar-app-private/polar-block-permissions/package.json
@@ -25,7 +25,9 @@
     "polar-firebase-test": "^2.1.107",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "polar-blocks": "^2.1.107",
