--- a/packages/polar-app-private/polar-firebase-admin/package.json
+++ b/packages/polar-app-private/polar-firebase-admin/package.json
@@ -22,7 +22,9 @@
     "mocha": "=9.0.0",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@google-cloud/storage": "=5.8.5",
