--- a/packages/polar-app-private/polar-hooks/functions/package.json
+++ b/packages/polar-app-private/polar-hooks/functions/package.json
@@ -83,6 +83,8 @@
     "chai": "4.2.0",
     "mocha": "=9.0.0",
     "polar-test": "^2.1.107",
-    "tslint": "6.1.2"
+    "tslint": "6.1.2",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   }
 }
