--- a/packages/polar-app-private/polar-hooks/package.json
+++ b/packages/polar-app-private/polar-hooks/package.json
@@ -30,5 +30,9 @@
     "polar-firebase": "^2.1.107",
     "polar-webapp-dist": "^2.1.107",
     "uuid": "3.3.3"
+  },
+  "devDependencies": {
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   }
 }
