--- a/packages/polar-app-public/polar-accounts/package.json
+++ b/packages/polar-app-public/polar-accounts/package.json
@@ -22,6 +22,8 @@
     "polar-shared": "^2.1.107",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   }
 }
