--- a/packages/polar-app-public/polar-backend-shared/package.json
+++ b/packages/polar-app-public/polar-backend-shared/package.json
@@ -27,7 +27,9 @@
     "@types/mocha": "=8.2.2",
     "chai": "4.2.0",
     "mocha": "=9.0.0",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "polar-shared-webserver": "^2.1.107",
