--- a/packages/polar-app-public/polar-content-capture/package.json
+++ b/packages/polar-app-public/polar-content-capture/package.json
@@ -24,7 +24,9 @@
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
-    "wait-for-expect": "3.0.1"
+    "wait-for-expect": "3.0.1",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "jszip": "=3.5.0",
