--- a/packages/polar-app-public/polar-desktop-app/package.json
+++ b/packages/polar-app-public/polar-desktop-app/package.json
@@ -56,7 +56,9 @@
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0"
+    "webpack-cli": "=4.5.0",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "polar-bookshelf": "^2.1.107",
