--- a/packages/polar-app-public/polar-dom-text-search/package.json
+++ b/packages/polar-app-public/polar-dom-text-search/package.json
@@ -22,7 +22,9 @@
     "jsdom-global": "3.0.2",
     "mocha": "=9.0.0",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
