--- a/packages/polar-app-public/polar-epub/package.json
+++ b/packages/polar-app-public/polar-epub/package.json
@@ -19,7 +19,9 @@
     "mocha": "=9.0.0",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "epubjs": "=0.3.89-polar.16",
