--- a/packages/polar-app-public/polar-eslint/package.json
+++ b/packages/polar-app-public/polar-eslint/package.json
@@ -7,5 +7,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  }
+    "@typescript-eslint/eslint-plugin": "=4.31.0",
+    "@typescript-eslint/parser": "=4.31.0",
+    "eslint-config-standard-with-typescript": "=21.0.1",
+    "eslint": "=7.32.0",
+    "eslint-config-prettier": "=8.3.0",
+    "eslint-plugin-import": "=2.24.2",
+    "eslint-plugin-jsdoc": "=36.1.0",
+    "eslint-plugin-prefer-arrow": "=1.2.3",
+    "eslint-plugin-react-hooks": "=4.2.0",
+    "prettier": "=2.3.2"
+  },
+  "devDependencies": {}
 }
