--- a/packages/polar-app-public/polar-file-saver/package.json
+++ b/packages/polar-app-public/polar-file-saver/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "file-saver": "^2.0.2"
