--- a/packages/polar-app-public/polar-google-cloud-language/package.json
+++ b/packages/polar-app-public/polar-google-cloud-language/package.json
@@ -22,7 +22,9 @@
     "polar-shared": "^2.1.107",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@google-cloud/language": "=4.2.5"
