--- a/packages/polar-app-public/polar-images/package.json
+++ b/packages/polar-app-public/polar-images/package.json
@@ -24,6 +24,8 @@
     "mocha": "=9.0.0",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   }
 }
