--- a/packages/polar-app-public/polar-markdown-parser/package.json
+++ b/packages/polar-app-public/polar-markdown-parser/package.json
@@ -18,7 +18,9 @@
     "chai": "4.2.0",
     "mocha": "=9.0.0",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/marked": "=1.2.0",
