--- a/packages/polar-app-public/polar-npm/package.json
+++ b/packages/polar-app-public/polar-npm/package.json
@@ -22,7 +22,9 @@
     "@types/node": "=14.14.35",
     "@types/pdfjs-dist": "2.1.71-polar.2",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "polar-shared": "^2.1.107"
