--- a/packages/polar-app-public/polar-page-metadata-parser/package.json
+++ b/packages/polar-app-public/polar-page-metadata-parser/package.json
@@ -21,7 +21,9 @@
     "jsdom": "=16.7.0",
     "mocha": "=9.0.0",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
