--- a/packages/polar-app-public/polar-pdf/package.json
+++ b/packages/polar-app-public/polar-pdf/package.json
@@ -23,7 +23,9 @@
     "polar-karma": "^2.1.107",
     "polar-webpack": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
