--- a/packages/polar-app-public/polar-react-svg-icons/package.json
+++ b/packages/polar-app-public/polar-react-svg-icons/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/burtonator/polar-app-public",
   "devDependencies": {
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "polar-react": "^2.1.107"
