--- a/packages/polar-app-public/polar-readability/package.json
+++ b/packages/polar-app-public/polar-readability/package.json
@@ -20,7 +20,9 @@
     "polar-shared": "^2.1.107",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "readability": "0.2.0-polar.2"
