--- a/packages/polar-app-public/polar-shared/package.json
+++ b/packages/polar-app-public/polar-shared/package.json
@@ -34,7 +34,9 @@
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
-    "wait-for-expect": "3.0.1"
+    "wait-for-expect": "3.0.1",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "base-x": "=3.0.8",
