--- a/packages/polar-app-public/polar-url/package.json
+++ b/packages/polar-app-public/polar-url/package.json
@@ -26,7 +26,9 @@
     "mocha": "=9.0.0",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "typescript": "=4.2.3",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/whatwg-url": "^6.4.0",
