--- a/packages/polar-app-public/polar-web-extension-api/package.json
+++ b/packages/polar-app-public/polar-web-extension-api/package.json
@@ -29,7 +29,9 @@
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0"
+    "webpack-cli": "=4.5.0",
+    "polar-eslint": "^2.1.107",
+    "polar-typescript": "^2.1.107"
   },
   "dependencies": {
     "@types/karma": "^5.0.1",
