--- a/packages/polar-app-public/polar-webpack/package.json
+++ b/packages/polar-app-public/polar-webpack/package.json
@@ -32,5 +32,6 @@
     "webpack-merge": "=5.2.0",
     "workbox-webpack-plugin": "=6.1.2",
     "worker-loader": "=3.0.5"
-  }
+  },
+  "devDependencies": {}
 }
