--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -106,7 +106,8 @@
     "wait-for-expect": "3.0.1",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0",
-    "workbox-cli": "=5.1.3"
+    "workbox-cli": "=5.1.3",
+    "polar-eslint": "^2.1.107"
   },
   "dependencies": {
     "@antv/g6": "^4.3.2",
