--- a/packages/polar-app-private/polar-block-permissions/package.json
+++ b/packages/polar-app-private/polar-block-permissions/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "dist": "echo noop",
     "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
