--- a/packages/polar-app-public/polar-firebase-browser/package.json
+++ b/packages/polar-app-public/polar-firebase-browser/package.json
@@ -4,7 +4,7 @@
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "dist": "echo noop",
     "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
