--- a/packages/polar-app-public/polar-lang-classifier/package.json
+++ b/packages/polar-app-public/polar-lang-classifier/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
     "compile": "tsc",
     "eslint": "eslint -c ./.eslintrc.json .",
