--- a/packages/polar-app-public/polar-shared/package.json
+++ b/packages/polar-app-public/polar-shared/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.107",
   "description": "",
   "scripts": {
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
     "eslint": "eslint -c ./.eslintrc.json .",
