--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -19,7 +19,7 @@
     "test-mocha": "npx mocha --exit --log-timer-events --recursive 'web/js/**/*Test.js'",
     "_test": "./scripts/test-runner.sh",
     "___test": "mocha --timeout 20000 --exit 'web/js/**/*Test.js' 'apps/**/*Test.js'",
-    "test": "if [ -z $(find src -name '**Test.js') ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "__test": "scripts/test.sh",
     "tslint": "tslint --project tsconfig.json --config tslint.yaml",
     "eslint": "eslint -c ./.eslintrc.json .",
@@ -106,7 +106,8 @@
     "wait-for-expect": "3.0.1",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0",
-    "workbox-cli": "=5.1.3"
+    "workbox-cli": "=5.1.3",
+    "polar-eslint": "^2.1.107"
   },
   "dependencies": {
     "@antv/g6": "^4.3.2",
