--- a/packages/polar-app-private/polar-cdk/package.json
+++ b/packages/polar-app-private/polar-cdk/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "cdk": "cdk",
     "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
+    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
