--- a/packages/polar-app-private/polar-hacker-news-crawler/package.json
+++ b/packages/polar-app-private/polar-hacker-news-crawler/package.json
@@ -8,7 +8,7 @@
     "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "dist": "echo noop",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
+    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix"
   },
