--- a/packages/polar-app-public/polar-pdf/package.json
+++ b/packages/polar-app-public/polar-pdf/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha --timeout 20000 --exit **/**/*Test.js",
+    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
     "karma": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
     "compile": "tsc",
     "eslint": "eslint -c ./.eslintrc.json .",
