--- a/packages/polar-app-private/polar-hooks/functions/package.json
+++ b/packages/polar-app-private/polar-hooks/functions/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "tslint": "tslint --project tsconfig.json --config tslint.yaml",
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "compile:watch": "npx tsc --watch",
     "dist": "yarn run compile",
-    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
+    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix"
   },
@@ -77,11 +77,11 @@
   "devDependencies": {
     "@types/archiver": "=5.1.0",
     "@types/chai": "4.2.11",
-    "@types/mocha": "=8.2.2",
+    "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "@types/stripe": "^6.30.3",
     "chai": "4.2.0",
-    "mocha": "=9.0.0",
+    "mocha": "=9.1.1",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
     "polar-eslint": "^2.1.107",
