--- a/packages/polar-app-public/polar-desktop-app/package.json
+++ b/packages/polar-app-public/polar-desktop-app/package.json
@@ -10,8 +10,8 @@
     "dist-macos": "npx webpack && electron-builder --config=electron-builder.yml --macos dmg zip --publish always",
     "dist-win": "npx webpack && ./build/dist-win.sh",
     "verify-electron-version": "./scripts/verify-electron-version",
-    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
+    "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "tsc"
@@ -48,7 +48,7 @@
     "electron-notarize": "1.0.0",
     "electron-updater": "=4.3.8",
     "fork-ts-checker-webpack-plugin": "=6.2.0",
-    "mocha": "=9.0.0",
+    "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
     "source-map-support": "=0.5.19",
     "thread-loader": "=3.0.1",
