--- a/packages/polar-app-public/polar-shared/package.json
+++ b/packages/polar-app-public/polar-shared/package.json
@@ -3,9 +3,9 @@
   "version": "2.1.107",
   "description": "",
   "scripts": {
-    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
-    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
+    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix"
   },
@@ -23,14 +23,14 @@
     "@types/blueimp-md5": "^2.7.0",
     "@types/chai": "4.2.11",
     "@types/deep-equal": "~1.0.1",
-    "@types/mocha": "=8.2.2",
+    "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "@types/node-fetch": "2.5.7",
     "@types/stopword": "^0.3.0",
     "@types/twitter-text": "^2.0.0",
     "@types/uuid": "3.4.5",
     "chai": "4.2.0",
-    "mocha": "=9.0.0",
+    "mocha": "=9.1.1",
     "polar-test": "^2.1.107",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
