--- a/packages/polar-app-public/polar-web-extension-api/package.json
+++ b/packages/polar-app-public/polar-web-extension-api/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
-    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "compile": "tsc",
     "build": "webpack --config webpack.config.js",
-    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
+    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix"
   },
@@ -18,13 +18,13 @@
   "devDependencies": {
     "@types/chai": "4.2.11",
     "@types/chrome": "0.0.114",
-    "@types/mocha": "=8.2.2",
+    "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "karma": "=6.3.2",
     "karma-chrome-launcher": "=3.1.0",
     "karma-cli": "^2.0.0",
     "karma-mocha": "=2.0.1",
-    "mocha": "=9.0.0",
+    "mocha": "=9.1.1",
     "ts-loader": "=8.0.18",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
