--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -19,7 +19,7 @@
     "test-mocha": "npx mocha --exit --log-timer-events --recursive 'web/js/**/*Test.js'",
     "_test": "./scripts/test-runner.sh",
     "___test": "mocha --timeout 20000 --exit 'web/js/**/*Test.js' 'apps/**/*Test.js'",
-    "test": "if [ -z \"$(find src -name '**Test.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
+    "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
     "__test": "scripts/test.sh",
     "tslint": "tslint --project tsconfig.json --config tslint.yaml",
     "eslint": "eslint -c ./.eslintrc.json .",
@@ -29,7 +29,7 @@
     "serve": "node scripts/serve.js",
     "karma": "../../node_modules/karma/bin/karma start",
     "karma:dev": "../../node_modules/karma/bin/karma start --browsers Chrome --singleRun false",
-    "mocha": "mocha --timeout 20000 --exit './{,!(node_modules)/**}/*Test.js'",
+    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix"
   },
   "repository": "https://github.com/burtonator/polar-bookshelf",
@@ -69,7 +69,7 @@
     "@types/js-cookie": "~2.2.0",
     "@types/jsdom": "=16.12.13",
     "@types/lodash": "~4.14.119",
-    "@types/mocha": "=8.2.2",
+    "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "@types/prop-types": "~15.7.3",
     "@types/react-helmet": "=6.1.0",
@@ -92,7 +92,7 @@
     "install": "^0.12.2",
     "jsdom": "=16.7.0",
     "mini-css-extract-plugin": "=0.9.0",
-    "mocha": "=9.0.0",
+    "mocha": "=9.1.1",
     "node-sass": "=4.14.1",
     "polar-typescript": "^2.1.107",
     "polar-webpack": "^2.1.107",
