--- a/packages/polar-app-public/polar-exporters/.eslintrc.json
+++ b/packages/polar-app-public/polar-exporters/.eslintrc.json
@@ -33,7 +33,8 @@
     "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
     "import/newline-after-import": "error",
     "import/no-cycle": "error",
-    "import/no-absolute-path": "error"
+    "import/no-absolute-path": "error",
+    "no-inner-declarations": "off"
   },
   "ignorePatterns": [
     "dist",
